tests/error/modifier_errors/decorator_dagger_is_preserved.err
Error: Dagger constraint violation (at $FILE:8:8)
  | 
6 | def apply_unitary(f: Controllable[[qubit], None], ctrl: qubit, q: qubit) -> None:
7 |     with dagger:
8 |         f(q)
  |         ^^^^ This function cannot be called in a daggerable context

Help: To be able to use a Controllable function in a daggerable context, you
have to declare it as `Daggerable`

Guppy compilation failed due to 1 previous error
